# xdbg64ai

./: .gitignore  ANDROID_README.md  ANDROID_SHIZUKU_README.md  INSTALL.md  INSTALLATION.md  LICENSE  README.md  RELEASE_README.md  android_process_connector.py  app.py  build.py  build_android.py  build_android.sh  build_android_shizuku.py  build_linux.sh  build_macos.sh  build_replit.py  build_windows.bat  create_release.py  install_dependencies.py  main.py  memory_ai_assistant.py  memory_editor.py  note  process_bridge.py  process_simulator.py  pyproject.toml  real_process_connector.py  replit.nix  version_info.txt  well.env
.github/workflows/: release.yml
android_app/: gradlew  settings.gradle
android_app/app/: build.gradle
android_app/app/src/main/assets/: process.html
android_app/app/src/main/cpp/: CMakeLists.txt  memory_access.cpp
android_app/app/src/main/java/com/memorydebugger/app/: ShizukuMemoryAccess.kt  WebAppInterface.kt
android_app/app/src/main/res/layout/: activity_webview.xml  item_process.xml
android_app/app/src/main/res/values/: colors.xml  strings.xml
attached_assets/: read it.txt
build_android_files/: AndroidManifest.xml  MainActivity.kt  ProcessAdapter.kt  WebViewActivity.kt  activity_main.xml  themes.xml
builds/: HOW_TO_BUILD_APK.md  MemoryDebugger-dev.apk
static/js/: memory_editor.js
templates/: index.html  process.html  real_process.html
tests/: test_android_integration.py
