[project]
name = "memory-debugger"
version = "1.0.0"
description = "A robust memory editor designed for detailed system process inspection and memory manipulation"
authors = [
    {name = "Memory Debugger Project"}
]
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.49.0",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "pyinstaller>=6.12.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]
